[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WrapSideSix"
version = "0.1.0"
description = "A reusable Python library for PySide6 widgets"
authors = [{ name = "David", email = "dave@chatrecall.com" }]
requires-python = ">=3.13"

dependencies = [
    "PySide6>=6.8.2",
    "requests>=2.32.3",
]

[tool.setuptools]
include-package-data = true